# python-e2e-testing

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
e2etests/: testclient.py
tests_pyfolio_api/: testcase.py
tests_pyfolio_api/tests/: test_categories.py  test_root_v1.py
tests_sample/: configs.py
tests_sample/tests/: test_root.py
tests_sample_rest_api/: configs.py
tests_sample_rest_api/tests/: test_category_api.py  test_root_api.py
