[tool.poetry]
name = "python-testing-api-starter"
version = "0.1.0"
description = "Starter template for quickstart API Testing with Pytests, Flake8"
authors = ["A Backend Guru <developer@abackendguru.com>"]
readme = "README.md"
packages = [{include = "python_testing_api_starter"}]

[tool.poetry.dependencies]
python = "^3.8.10"
requests = "^2.28.1"
faker = "^15.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-schema = "^0.1.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
