[tool.poetry]
name = "python-e2e-testing"
version = "0.1.0"
description = "Starter template for quickstart API Testing with Pytests, Requests, Flake8"
authors = ["Ethan V <info@ethanvu.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
requests = "^2.28.1"
faker = "^15.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-schema = "^0.1.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
